# ai-prompt-auto-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  install.sh  post-commit  pre-commit  prepare-commit-msg  pyproject.toml  release  tox.ini
.claude/: settings.json
.github/: assistant-guidelines.md
.github/workflows/: test.yml
ai_prompt_auto_commit/: append.py  archive.py  common.py  hooks.py  interceptor.py  prepare_repository.py  unstage.py
ai_prompt_auto_commit/data/: assistant-guidelines.md  claude_settings.json
tests/: conftest.py  test_append_to_commit_msg.py  test_archive.py  test_interceptor.py  test_prepare_repository.py  test_unstage.py
