[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-prompt-auto-commit"
version = "1.0.0"
description = "Records AI prompts in git commit messages"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.scripts]
unstage-ai-prompts      = "ai_prompt_auto_commit.hooks:unstage_main"
append-ai-prompts       = "ai_prompt_auto_commit.hooks:append_main"
archive-ai-prompts      = "ai_prompt_auto_commit.hooks:archive_main"
prepare-ai-repository   = "ai_prompt_auto_commit.hooks:prepare_repository_main"

[tool.setuptools.package-data]
ai_prompt_auto_commit = ["data/*.json"]
